syntax = "proto3";

import "ci/tasklet/common/proto/service.proto";
import "tasklet/services/ci/proto/ci.proto";
import "tasklet/api/tasklet.proto";

package alice.tasklet.check_rm_tests;

message Context {
    option (.tasklet.context) = true;
}

message Config {
    string component_name = 1;
    int32 branch = 2;
    int32 base_commit_id = 5;

    int32 retries = 6;
    int32 sleep_time = 7;
    float backoff = 8;
}

message TaskStates {
    map<string, string> resources = 1;
}


message State {
    bool success = 1;
}

message Input {
    ci.TaskletContext context = 1;

    Config config = 2;
}

message Output {
    State state = 1;
    TaskStates task_states = 2;
}

message CheckRmTests {
    option (.tasklet.tasklet_interface) = true;

    Input input = 1 [(.tasklet.input) = true];
    Output output = 2 [(.tasklet.output) = true];

    Context ctx = 3;
}
